--- a/index.html
+++ b/index.html
@@ -1,7 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Verkkosivun nimi</title>
+    <link rel="stylesheet" href="Tyyli.css">
+     <!-- Lisää JavaScript-tiedosto tässä -->
+     <script src="koodi.js" defer></script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <nav id="navigointipalkki">
+            <h1>HAAGA-HELIAN MUSIIKKIKERHO</h1>
+            <ul>
+                <li><a href="Haaga-Helian musiikkikerho.html">Etusivu</a></li>
+                <li><a href="Blogi.html">Blogi</a></li>
+                <li><a href="Äänestys.html">Äänestys</a></li>
+                <li><a href="Yhteystiedot&Aikataulut.html">Yhteystiedot & Aikataulut</a></li>
+            </ul>
+        </nav>
+        <script src="script.js"></script>
+    </header>
+    <main>
+        <div class="content">
+            <section>
+                <h2>TERVETULOA HAAGA-HELIAN MUSIIKKIKERHON VERKKOSIVUILLE!</h2>
+                <p>Tältä verkkosivulta löydät kaikki tarvitsemasi tiedot Haaga-Helian musiikkikerhon toimintaan liittyen.</p>
+            </section>
+            <section>
+                <h2>KERHON TOIMINTA</h2>
+                <p>Tämä kerho on perustettu 2024 kevätlukukaudella ja sen perimmäisenä toimintana on musiikin kuuntelu yhdessä muiden kerhon jäsenten kanssa. Kerho kokoontuu 1-2 viikon välein erikseen ilmoitettuun luokkatilaan Pasilan kampuksella ja yhden tapaamiskerran aikana kuuntelun jälkeen kerholaisilla on mahdollisuus keskustella levyn nostamista ajatuksista muiden kerholaisten kanssa</p>
+            </section>
+            <section>
+                <h2>MUSIIKKI JA MUUT KERHOLAISET</h2>
+                <p>Kuuntelit sitten modernia hiphoppia tai 70-luvun fuusiojazzia, kerhon toimintaan osallistuminen on kokeilemisen arvoista. Pyrimme kerhossa siihen, että kävisimme mahdollisimman monen eri genren ja artistin musiikkia läpi sillä henkilökohtaisen musiikkimaun muodostamien suosikkiartistien musiikki on objektiivisesti samalla viivalla sellaisten tyylilajien kanssa, joihin itse ei ole päässyt perehtymään. Kuuntelemalla uudenlaista musiikkia kerhon toiminnan kautta voimme kaikki löytää meitä kiinnostavia uusia tapoja nauttia musiikista.</p>
+            </section>
+            <section>
+                <h2>OTA YHTEYTTÄ</h2>
+                <p>Onko sinulla intoa tuoda valitsemasi teos muiden kuunneltavaksi ja jakaa ajatuksia siitä musiikista kiinnostuneiden opiskelijoiden kanssa? Mikäli sinua kiinnostaa osallistua kerhon toimintaan tai sen kehittämiseen, ota yhteyttä yhteystietosivuilla oleviin henkilöihin. Haaga-Helian opiskelijat vastaavat kerhon toiminnasta.</p>
+            </section>
+        </div>
+    </main>    
+    <footer>
+        <p>&copy; 2024 Haaga-Helian musiikkikerho. Kaikki oikeudet pidätetään.</p>
+    </footer>
 </body>
 </html>
